<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/movie_name"
  />
  <EditText
    android:id="@+id/movietitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/movie_desc"
  />
  <EditText
    android:id="@+id/description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/movie_lang"/>

  <RadioGroup
    android:id="@+id/radioGroup"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
      android:id = "@+id/rbtneng"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rbtneng_text"/>

    <RadioButton
      android:id = "@+id/rbtnchi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rbtnchi_text"/>

    <RadioButton
      android:id = "@+id/rbtnmal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rbtnmal_text"/>

    <RadioButton
      android:id = "@+id/rbtntam"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rbtntam_text"/>
  </RadioGroup>


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/movie_rd"
  />
  <EditText
    android:id="@+id/rd"
    android:inputType="date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


  <CheckBox
    android:id="@+id/chkbxage"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text = "@string/chkbxage_text"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
      android:id="@+id/chkbxvio"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:visibility="gone"
      android:text="@string/chkbxvio_text"/>


    <CheckBox
      android:id="@+id/chkbxlang"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:visibility="gone"
      android:text="@string/chkbxlang_text"/>
  </LinearLayout>

</LinearLayout>
