<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddReview"
  android:orientation="vertical">
  <?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMovieReview">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/movieimg"
    />

    <TextView
      android:id ="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/movie_name"

    />

    <TextView
      android:id="@+id/rettitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"
    />

    <TextView
      android:id ="@+id/des"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/movie_desc"
    />

    <TextView
      android:id = "@+id/retdes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/reviews" />

    <TextView
      android:id = "@+id/retrev"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="15sp"
      android:text ="Long Press here to add review"/>

    <TextView
      android:id = "@+id/lang"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/movie_lang"/>

    <TextView
      android:id = "@+id/retlang"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="15sp"/>

    <TextView
      android:id = "@+id/rd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/movie_rd"
    />

    <TextView
      android:id="@+id/retrel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="15sp"/>

    <TextView
      android:id = "@+id/suitable"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Suitable for children below 13"
    />

    <TextView
      android:id="@+id/retsuit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="15sp"/>

  </LinearLayout>
